# ray-tracer

./: CMakeLists.txt  Camera.cpp  Camera.h  Light.h  Makefile  README.md  Ray.h  Shape.h  Sphere.h  Vector3.h  World.cpp  World.h  main.cpp  simpleTexture.cpp
